Mask Motionblur is wrong when parented to plane track #42585

Closed
opened 2014-11-13 10:57:23 +01:00 by Sebastian Koenig · 6 comments

System Information
Osx 10.9.5, GTX660ti

Blender Version
Broken: 2.72 and cbf76d1

Short description of error
When parenting a mask to a plane track the motionblur is calculated wrong. There seem to be only 2 samples being used.

Exact steps for others to reproduce the error
In attached blendfile you see the correct motionblur of the mask on the right side. This masklayer was handanimated. But on the left you see the masklayer which was parented to a plane track, using the captains head from ToS in shot 04_3e.
maskmotionblur.blend

**System Information** Osx 10.9.5, GTX660ti **Blender Version** Broken: 2.72 and cbf76d1 **Short description of error** When parenting a mask to a plane track the motionblur is calculated wrong. There seem to be only 2 samples being used. **Exact steps for others to reproduce the error** In attached blendfile you see the correct motionblur of the mask on the right side. This masklayer was handanimated. But on the left you see the masklayer which was parented to a plane track, using the captains head from ToS in shot 04_3e. [maskmotionblur.blend](https://archive.blender.org/developer/F123598/maskmotionblur.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Sebastian Koenig 2014-11-13 10:57:23 +01:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

This issue was referenced by 8e16c5294b

This issue was referenced by 8e16c5294bf2b6b6c72ec9c6a2b8dcc9b79c4acd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8e16c5294b.

Closed by commit 8e16c5294b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42585
No description provided.