Fix T42585: Mask motion blur is wrong when parented to plane track

it wasn't wrong, it wasn't implemented.