source/blender/blenkernel/intern/mask.c
@@ -1187,11 +1187,12 @@ void BKE_mask_point_parent_matrix_get(MaskSplinePoint *point, float ctime, float
 					MovieTrackingPlaneTrack *plane_track = BKE_tracking_plane_track_get_named(tracking, ob, parent->sub_parent);
 
 					if (plane_track) {
-						MovieTrackingPlaneMarker *plane_marker = BKE_tracking_plane_marker_get(plane_track, clip_framenr);
+						float corners[4][2];
 						float aspx, aspy;
 						float frame_size[2], H[3][3], mask_from_clip_matrix[3][3], mask_to_clip_matrix[3][3];
 
-						BKE_tracking_homography_between_two_quads(parent->parent_corners_orig, plane_marker->corners, H);
+						BKE_tracking_plane_marker_get_subframe_corners(plane_track, ctime, corners);
+						BKE_tracking_homography_between_two_quads(parent->parent_corners_orig, corners, H);
 
 						unit_m3(mask_from_clip_matrix);
 
